--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<button onclick="loadJson()">Load</button>
 	<button onclick="generateLatex()">CopyLatex</button>
 	<button onclick="clearJson()">Clear</button>
+	<button onclick="undo()">Undo</button>
   <meta charset="utf-8">
 	<style>
 
